# RAG_Udemy

./: .gitignore  Introduction_to_RAG.md  pyproject.toml  requirements.txt  uv-package-setup.md
Advanced Chunking And Preprocessing Techniques/: 1.semantic_chunking.ipynb  basic_introduction.md
Data Ingestion And Data Parsing Techniques/: 1.data_ingestion.ipynb  2.data_ingestion_pdf.ipynb  3.data_ingestion_word_doc.ipynb  4.data_ingestion_csv_excel.ipynb  5.data_ingestion_json.ipynb  6.data_ingestion_database_parsing.ipynb  Data Ingestion and Parsing .md
Hybrid Search Strategies/: 1.denses_parse_search.ipynb  2.re-ranking_strategy.ipynb  3.maximum_marginal_relevance_strategy.ipynb  basic_info.md
LangChainV1/: 1.langchain_v1_intro.ipynb  2.langchain_invoke_batch_stream.ipynb  3.langchain_tools.ipynb  4.langchain_message.ipynb  5.langchain_pydantic.ipynb  6.langchain_middleware.ipynb  Invoke_Batch_Streaming_info.md  LangChain v1 message .md  LangChain_Middleware.md
Query Enhancement/: 1.query_expansion.ipynb  2.query_decomposition.ipynb  3.hyde_expansion.ipynb  basic_info.md
Vector Embeddings & Vector Stores/: 1.simple_embeddings.ipynb  2.hugging_face_embeddings.ipynb  3.open_ai_embeddings.ipynb  4.simple_rag_with_chromadb.ipynb  5.simple_rag_with_faiss.ipynb  7.astra_vector_database.ipynb  8.pinecone_vector_database.ipynb  basics_information.md
