[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.1",
    "ipykernel>=7.1.0",
    "jq>=1.10.0",
    "langchain>=1.1.3",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "msoffcrypto-tool>=5.4.2",
    "nbconvert>=7.16.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.21",
    "wikipedia>=1.4.0",
]
